# ocs2

ocs2_core/include/ocs2_core/: Types.h
ocs2_core/src/: Types.cpp
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_ipm/include/ocs2_ipm/approximate_model/: ChangeOfInputVariables.h  ConstraintProjection.h  DualVariableReconstructor.h  IpmVariableEliminator.h  IpmVariablesEliminator.h  IpmVariablesRetriver.h  LinearQuadraticApproximator.h  LinearQuadraticDiscretizer.h
ocs2_ipm/include/ocs2_ipm/core/: InteriorPointMethod.h  InteriorPointMethodData.h  SlackDual.h  SlackDualDirection.h
ocs2_ipm/include/ocs2_ipm/ipm/: InteriorPointMethod.h  InteriorPointMethodData.h  InteriorPointMethodSolution.h  SlackDual.h  SlackDualData.h  SlackDualDirection.h
ocs2_ipm/include/ocs2_ipm/model_data/: Hamiltonian.h  ModelData.h  ModelDataLinearInterpolation.h
ocs2_ipm/include/ocs2_ipm/oc_data/: DualVariable.h  IpmData.h  IpmVariables.h  Metrics.h
ocs2_ipm/include/ocs2_ipm/oc_problem/: OptimalControlProblem.h
ocs2_ipm/include/ocs2_ipm/oc_solver/: PerformanceIndex.h
ocs2_ipm/src/approximate_model/: ChangeOfInputVariables.cpp  ConstraintProjection.cpp  DualVariableReconstructor.cpp  IpmVariablesEliminator.cpp  IpmVariablesRetriver.cpp  LinearQuadraticApproximator.cpp  LinearQuadraticDiscretizer.cpp
ocs2_ipm/src/core/: InteriorPointMethod.cpp  InteriorPointMethodData.cpp  SlackDual.cpp
ocs2_ipm/src/ipm/: InteriorPointMethod.cpp  InteriorPointMethodData.cpp  InteriorPointMethodSolution.cpp  SlackDual.cpp  SlackDualData.cpp
ocs2_ipm/src/model_data/: Hamiltonian.cpp  ModelData.cpp
ocs2_ipm/src/oc_data/: DualVariable.cpp  IpmData.cpp  IpmVariables.cpp  Metrics.cpp
ocs2_ipm/src/oc_problem/: OptimalControlProblem.cpp
ocs2_ipm/test/: testInteriorPointMethod.cpp  testSlackDual.cpp
ocs2_ipm/test/approximate_model/: Exp0Test.cpp
ocs2_ipm/test/core/: testInteriorPointMethod.cpp  testSlackDual.cpp
ocs2_ipm/test/model_data/: testModelData.cpp
ocs2_ipm_oc/: CMakeLists.txt  package.xml
ocs2_ipm_oc/include/ocs2_ipm_oc/approximate_model/: ConstraintProjection.h  IpmVariablesEliminator.h  IpmVariablesRetriver.h  LinearQuadraticApproximator.h
ocs2_ipm_oc/include/ocs2_ipm_oc/oc_data/: IpmData.h  IpmVariables.h  PerformanceIndex.h
ocs2_ipm_oc/include/ocs2_ipm_oc/oc_problem/: OptimalControlProblem.h
ocs2_ipm_oc/include/ocs2_ipm_oc/oc_solver/: PerformanceIndex.h
ocs2_ipm_oc/src/approximate_model/: ChangeOfInputVariables.cpp  ConstraintProjection.cpp  IpmVariablesEliminator.cpp  IpmVariablesRetriver.cpp  LinearQuadraticApproximator.cpp  LinearQuadraticDiscretizer.cpp
ocs2_ipm_oc/src/oc_data/: IpmData.cpp  IpmVariables.cpp
ocs2_ipm_oc/src/oc_problem/: OptimalControlProblem.cpp
ocs2_ipm_oc/test/approximate_model/: Exp0Test.cpp
ocs2_robotic_examples/ocs2_stoc_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_stoc_legged_robot/config/mpc/: stoc.info  task.info
ocs2_robotic_examples/ocs2_stoc_legged_robot/include/ocs2_stoc_legged_robot/: STOC_LeggedRobotInterface.h
ocs2_robotic_examples/ocs2_stoc_legged_robot/include/ocs2_stoc_legged_robot/constraint/: FrictionConeIneqConstraint.h
ocs2_robotic_examples/ocs2_stoc_legged_robot/src/: STOC_LeggedRobotInterface.cpp
ocs2_robotic_examples/ocs2_stoc_legged_robot/src/constraint/: FrictionConeIneqConstraint.cpp
ocs2_robotic_examples/ocs2_stoc_legged_robot/test/constraint/: testFrictionConeIneqConstraint.cpp
ocs2_robotic_examples/ocs2_stoc_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_stoc_legged_robot_ros/launch/: legged_robot_stoc.launch
ocs2_robotic_examples/ocs2_stoc_legged_robot_ros/src/: LeggedRobotStocMpcNode.cpp
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/config/franka/: stoc.info  task.info
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/config/kinova/: task_j2n6.info  task_j2n7.info
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/config/mabi_mobile/: task.info
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/config/pr2/: task.info
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/config/ridgeback_ur5/: task.info
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/include/ocs2_stoc_mobile_manipulator/: STOC_MobileManipulatorInterface.h
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/include/ocs2_stoc_mobile_manipulator/constraint/: JointPositionLimitsIneq.h  JointVelocityLimitsIneq.h
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/src/: STOC_MobileManipulatorInterface.cpp
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator/src/constraint/: JointPositionLimitsIneq.cpp  JointVelocityLimitsIneq.cpp
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator_ros/launch/: manipulator_franka.launch  manipulator_kinova_j2n6.launch  manipulator_kinova_j2n7.launch  manipulator_mabi_mobile.launch  manipulator_pr2.launch  manipulator_ridgeback_ur5.launch
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator_ros/launch/include/: mobile_manipulator.launch
ocs2_robotic_examples/ocs2_stoc_mobile_manipulator_ros/src/: MobileManipulatorMpcNode.cpp
ocs2_sto/: CMakeLists.txt  package.xml
ocs2_sto/include/ocs2_sto/: ModeSchedule.h  ValidModeSchedule.h
ocs2_sto/src/: ModeSchedule.cpp  ValidModeSchedule.cpp
ocs2_sto/src/constraint/: MPC_MinimumDwellTimeConstraint.cpp  MinimumDwellTimeConstraint.cpp  StoConstraintCollection.cpp
ocs2_sto/test/: testValidModeSchedule.cpp
ocs2_sto_ipm/: CMakeLists.txt  package.xml
ocs2_sto_ipm/src/: TimeDiscretization.cpp  Types.cpp
ocs2_sto_ipm/test/: testTimeDiscretization.cpp
ocs2_stoc/: CMakeLists.txt  package.xml
ocs2_stoc/src/: DiscreteTimeModeSchedule.cpp  STOC.cpp  STOC_HelperFunctions.cpp  STOC_Settings.cpp  TimeDiscretization.cpp
ocs2_stoc/test/: Exp0Test.cpp  Exp1Test.cpp  exp0_stoc_test.cpp  exp1_stoc_test.cpp  testCircularKinematics.cpp  testDiscreteTimeModeSchedule.cpp  testTimeDiscretization.cpp
(+77 files in other folders)
