<?xml version="1.0"?>
<package format="2">
  <name>ocs2_ipm</name>
  <version>0.0.1</version>
  <description>The ocs2_ipm package.</description>

  <maintainer email="sotaro.katayama@gmail.com">Sotaro Katayama</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>ocs2_core</depend>

</package>

