<?xml version="1.0"?>
<package format="2">
  <name>ocs2_ipm_oc</name>
  <version>0.0.1</version>
  <description>The ocs2_ipm_oc package.</description>

  <maintainer email="sotaro.katayama@gmail.com">Sotaro Katayama</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_ipm</depend>
  <depend>ocs2_sto</depend>

</package>

