<?xml version="1.0"?>
<package format="2">
  <name>ocs2_stoc_legged_robot</name>
  <version>0.0.1</version>
  <description>The ocs2_legged_robot package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
  <maintainer email="jeanpierre.sleiman@mavt.ethz.ch">Jean-Pierre Sleiman</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_ipm</depend>
  <depend>ocs2_sto</depend>
  <depend>ocs2_ipm_oc</depend>
  <depend>ocs2_stoc</depend>

</package>
