<?xml version="1.0"?>
<package format="2">
  <name>ocs2_stoc_mobile_manipulator</name>
  <version>0.0.0</version>
  <description>The ocs2_stoc_mobile_manipulator package</description>

  <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>ocs2_ipm</depend>
  <depend>ocs2_stoc</depend>

</package>